--- a/tp_1(Calculadora)/MiCalculadora/MiCalculadora.csproj
+++ b/tp_1(Calculadora)/MiCalculadora/MiCalculadora.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2920A88F-30CF-4C55-948B-97DA79197E48}</ProjectGuid>
+    <ProjectGuid>{DF61DA01-F8AC-41B9-9AD4-857039C989BF}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Calculadora</RootNamespace>
-    <AssemblyName>Calculadora</AssemblyName>
+    <RootNamespace>MiCalculadora</RootNamespace>
+    <AssemblyName>MiCalculadora</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -78,6 +78,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Entidades\Entidades.csproj">
+      <Project>{2427a0be-03fd-4baf-bd0d-05824aa164e0}</Project>
+      <Name>Entidades</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
