--- a/tp_3 (Universidad)/Excepciones/Excepciones.csproj
+++ b/tp_3 (Universidad)/Excepciones/Excepciones.csproj
@@ -4,12 +4,12 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8383480E-919C-4129-AD18-49C72C905AD3}</ProjectGuid>
+    <ProjectGuid>{A13253A0-202C-4946-AE96-9247FE0BB3C3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Bustamante.Francisco._2A.TP3</RootNamespace>
-    <AssemblyName>Bustamante.Francisco.2A.TP3</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <RootNamespace>Excepciones</RootNamespace>
+    <AssemblyName>Excepciones</AssemblyName>
+    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
@@ -31,6 +31,19 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Archivos">
+      <HintPath>..\Archivos\bin\Debug\Archivos.dll</HintPath>
+    </Reference>
+    <Reference Include="EntidadesAbstractas">
+      <HintPath>..\EntidadesAbstractas\bin\Debug\EntidadesAbstractas.dll</HintPath>
+    </Reference>
+    <Reference Include="EntidadesInstanciables">
+      <HintPath>..\EntidadesInstanciables\bin\Debug\EntidadesInstanciables.dll</HintPath>
+    </Reference>
+    <Reference Include="Excepciones, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Debug\Excepciones.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,8 +54,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Persona.cs" />
+    <Compile Include="AlumnoRepetidoException.cs" />
+    <Compile Include="ArchivosException.cs" />
+    <Compile Include="DniInvalidoException.cs" />
+    <Compile Include="NacionalidadInvalidaException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SinProfesorException.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
